[package]
name = "iso-8601"
version = "0.2.0"
authors = ["Robin Stumm <serverkorken@gmail.com>"]
description = "Fully compliant ISO 8601 parser."
repository = "https://bitbucket.org/dermetfan/iso-8601"
keywords = ["iso8601"]
categories = ["parser-implementations", "date-and-time"]
license = "Apache-2.0"

[features]
chrono-serde = ["chrono/serde", "serde"]

[dependencies]
nom = { version = "~4.0.0", features = ["regexp"] }
regex = "~1.0.5"
chrono = { version = "~0.4.6", optional = true }
serde = { version = "~1.0.76", optional = true }
