[package]
name = "iso-8601"
version = "0.4.1"
authors = ["Robin Stumm <serverkorken@gmail.com>"]
description = "Fully compliant ISO 8601 parser."
repository = "https://hg.sr.ht/~dermetfan/iso-8601"
keywords = ["iso8601"]
categories = ["parser-implementations", "date-and-time"]
license = "Apache-2.0"

[features]
chrono-serde = ["chrono/serde", "serde"]

[dependencies]
nom = { version = "~6.2.1", features = ["regexp"] }
chrono = { version = "~0.4.19", optional = true }
serde = { version = "~1.0.126", optional = true }
